# django-issue-tracker

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
config/: settings.py  urls.py
issues/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_created_at_and_more.py  0002_issue_author_alter_issue_assignee.py  0003_alter_comment_author_alter_comment_created_at_and_more.py
issues/tests/: test_auth_views.py  test_htmx_views.py  test_models.py  test_views.py
issues/tests/e2e/: test_playwright.py
locale/pl/LC_MESSAGES/: django.mo  django.po
static/css/: tailwind.css
templates/: base.html
templates/auth/: login.html  register.html
templates/issues/: _comment_item.html  _comments_section.html  _issue_form.html  _issue_item.html  _issue_list.html  _status_badge.html  detail.html  list.html
templates/projects/: create.html  detail.html  list.html
